--- a/dashboard/templates/dashboard/settings.html
+++ b/dashboard/templates/dashboard/settings.html
@@ -1,4 +1,5 @@
 {% extends "dashboard/base.html" %}
-{% block content %}
-	<h1>Under Maintenance</h1>
+{% load crispy_forms_tags %}
+{% block content %} 
+	<h1> Under Maintenance </h1>
 {% endblock content %}
