--- a/dashboard/templates/dashboard/register.html
+++ b/dashboard/templates/dashboard/register.html
@@ -7,7 +7,7 @@
 			<fieldset class="form-group">
 				<legend class="border-bottom mb-4">Join Now</legend>
               {{ user_form | crispy }}
-              <!-- {{ profile_form | crispy }} -->
+              {{ profile_form | crispy }}
 			</fieldset>
 			<div class="form-group">
 				<button class="btn btn-outline-info" type="submit">Sign Up</button>
